# rag_n_chat

./: .gitignore  IDEATION_DESIGN.md  README.md
api/: README.md  api.py  app.py  pyproject.toml  requirements.txt
django/: manage.py  pyproject.toml  rag-n-chat  rag-n-chat-cli.py  rag-n-chat-ctrl  setup.md
django/api/: tests.py  urls.py  views.py
django/api/utils/: utils.py
django/api/views/: __init__.py  ping.py
django/api/views/chat/: __init__.py  prompt.py
django/api/views/repo/: __init__.py  delete.py  list.py  vectorize.py
django/common/: utils.py
django/common/chat/: prompt.py
django/common/repo/: delete.py  list.py  vectorize.py
django/global/: asgi.py  settings.py  urls.py  wsgi.py
